--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,119 @@
 <!doctype html>
-<html lang="en">
+  <html lang="en">
+
   <head>
     <meta charset="UTF-8">
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    >
+    <meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML Form</title>
     <link rel="stylesheet" href="./style.css">
   </head>
+
   <body>
-    <h1>HTML Form</h1>
+    <form action="" class="first-form"
+      method="post" onsubmit="onSubmit()">
+      <fieldset class="fieldset__opt">
+        <legend>Personal information</legend>
+        <div class="form__input">
+          <label for="surname">Surname:</label>
+          <input type="text" id="surname"
+            name="surname" autocomplete="off">
+        </div>
+        <div class="form__input">
+          <label for="name">Name:</label>
+          <input type="text" name="name"
+            id="name" tabindex="2"
+            maxlength="12" autocomplete="off">
+        </div>
+        <div class="form__input">
+          <label for="how-old">How old are You?</label>
+          <input type="number" name="how-old"
+            id="how-old" value="12"
+            min ="12" max="100">
+        </div>
+        <div class="form__input">
+          <label for="birth-date">Full date of birth:</label>
+          <input type="date" name="birth-date"
+            id="birth-date" tabindex="4">
+        </div>
+        <div class="form__input">
+          <label for="accept-agreement">I accept the term of the agreement</label>
+          <input type="checkbox" name="accept-agreement"
+            id="accept-agreement" tabindex="5">
+        </div>
+      </fieldset>
+      <fieldset class="fieldset__opt">
+        <legend>Registration</legend>
+        <div class="form__input">
+          <label for="email">E-mail:</label>
+          <input type="email" name="email"
+            id="email" placeholder="email@example.com"
+            tabindex="6">
+        </div>
+        <div class="form__input">
+          <label for="pass">Password:</label>
+          <input type="password" name="pass"
+            id="pass" tabindex="7"
+            minlength="5" required>
+        </div>
+      </fieldset>
+      <fieldset class="fieldset__opt">
+        <legend>An interesting fact about you!</legend>
+        <div class="form__input">
+          Do you love cats?
+          <input type="radio" name="lovecat"
+            id="lovecat1" tabindex="8">
+          <label for="lovecat1">Yes</label>
+          <input type="radio" name="lovecat"
+            id="lovecat2">
+          <label for="lovecat2">No</label>
+        </div>
+        <div class="form__input">
+          <label for="favorite-color">What is your favorite color?</label>
+          <input type="color" name="favorite-color"
+            id="favorite-color" tabindex="9">
+        </div>
+        <div class="form__input">
+          <label for="time-bed">What time do you go to bed?</label>
+          <input type="time" name="time-bed"
+            id="time-bed">
+        </div>
+        <div class="form__input">
+          <label for="favorite-car">What are your favorite brand of cars?</label>
+          <select name="favorite-car" id="favorite-car"
+            multiple tabindex="10">
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">LADA</option>
+          </select>
+        </div>
+        <div class="form__input">
+          <label for="rate-work">How do you rate our work?</label>
+          <input type="range" name="rate-work"
+            id="rate-work" value="0"
+            tabindex="11">
+        </div>
+      </fieldset>
+      <fieldset class="fieldset__opt">
+        <legend>Additional info:</legend>
+        <div class="form__input">
+          <label for="comments">Comments:</label>
+          <textarea name="comments" id="comments"
+            tabindex="12"
+         ></textarea>
+        </div>
+        <div class="form__input">
+          <label for="recommend">Would you recommend us?</label>
+          <select name="recommend" id="recommend"
+            tabindex="13">
+            <option value="">yes</option>
+            <option value="">no</option>
+          </select>
+        </div>
+      </fieldset>
+      <button type="submit" id="">Submit</button>
+    </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
