--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,19 @@
 
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta 
+      name="viewport"
+      content="width=device-width, user-scalable=no,
+      initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    >
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML Form</title>
     <link rel="stylesheet" href="./style.css">
   </head>
 
   <body>
-    <form
-      action=""
+      <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application"
       class="first-form"
       method="post"
       onsubmit="onSubmit()"
@@ -143,7 +146,8 @@
 
         <div class="form__input">
           <label for="favorite-car">What are your favorite brand of cars?</label>
-          <select name="favorite-car"
+          <select
+            name="favorite-car"
             id="favorite-car"
             multiple tabindex="10"
           >
@@ -189,7 +193,7 @@
           </select>
         </div>
       </fieldset>
-      <button type="submit" id="">Submit</button>
+      <button type="submit">Submit</button>
     </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
