--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-  <html lang="en">
-
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta
@@ -12,11 +11,9 @@
     <title>HTML Form</title>
     <link rel="stylesheet" href="./style.css">
   </head>
-
   <body>
     <form
       action="https://mate-academy-form-lesson.herokuapp.com/create-application"
-      class="first-form"
       method="post"
       onsubmit="onSubmit()"
     >
@@ -46,11 +43,11 @@
         </div>
 
         <div class="form__input">
-          <label for="how-old">How old are You?</label>
+          <label for="howOld">How old are You?</label>
           <input
             type="number"
-            name="how-old"
-            id="how-old"
+            name="howOld"
+            id="howOld"
             value="12"
             min ="12"
             max="100"
@@ -58,21 +55,21 @@
         </div>
 
         <div class="form__input">
-          <label for="birth-date">Full date of birth:</label>
+          <label for="birthDate">Full date of birth:</label>
           <input
             type="date"
-            name="birth-date"
-            id="birth-date"
+            name="birthDate"
+            id="birthDate"
             tabindex="4"
           >
         </div>
 
         <div class="form__input">
-          <label for="accept-agreement">I accept the term of the agreement</label>
+          <label for="acceptAgreement">I accept the term of the agreement</label>
           <input
             type="checkbox"
-            name="accept-agreement"
-            id="accept-agreement"
+            name="acceptAgreement"
+            id="acceptAgreement"
             tabindex="5"
           >
         </div>
@@ -126,29 +123,29 @@
         </div>
 
         <div class="form__input">
-          <label for="favorite-color">What is your favorite color?</label>
+          <label for="favoriteColor">What is your favorite color?</label>
           <input
             type="color"
-            name="favorite-color"
-            id="favorite-color"
+            name="favoriteColor"
+            id="favoriteColor"
             tabindex="9"
           >
         </div>
 
         <div class="form__input">
-          <label for="time-bed">What time do you go to bed?</label>
+          <label for="timeBed">What time do you go to bed?</label>
           <input
             type="time"
-            name="time-bed"
-            id="time-bed"
+            name="timeBed"
+            id="timeBed"
           >
         </div>
 
         <div class="form__input">
-          <label for="favorite-car">What are your favorite brand of cars?</label>
+          <label for="favoriteCar">What are your favorite brand of cars?</label>
           <select
-            name="favorite-car"
-            id="favorite-car"
+            name="favoriteCar"
+            id="favoriteCar"
             multiple tabindex="10"
           >
             <option value="BMW">BMW</option>
@@ -158,11 +155,11 @@
         </div>
 
         <div class="form__input">
-          <label for="rate-work">How do you rate our work?</label>
+          <label for="rateWork">How do you rate our work?</label>
           <input
             type="range"
-            name="rate-work"
-            id="rate-work"
+            name="rateWork"
+            id="rateWork"
             value="0"
             tabindex="11"
           >
@@ -175,9 +172,9 @@
         <div class="form__input">
           <label for="comments">Comments:</label>
           <textarea
-          name="comments"
-          id="comments"
-          tabindex="12"
+            name="comments"
+            id="comments"
+            tabindex="12"
          ></textarea>
         </div>
 
